[gd_scene load_steps=6 format=3 uid="uid://b7ysejifbpiyt"]

[ext_resource type="Script" path="res://title_menu.gd" id="1_65ybi"]
[ext_resource type="Texture2D" uid="uid://lmops2oruyf4" path="res://Assets/Background/casino bakground.jpg" id="1_bfqo5"]
[ext_resource type="Theme" uid="uid://dlipcofxf27vx" path="res://Assets/Themes and Styleboxes/Title_theme.tres" id="3_2w1h0"]
[ext_resource type="Theme" uid="uid://vaqjrd6whv3q" path="res://Assets/Themes and Styleboxes/SUB-TITLE.tres" id="4_110fr"]
[ext_resource type="PackedScene" uid="uid://t5scb6qrkf2q" path="res://Music_slider.tscn" id="5_6xoau"]

[node name="Title Menu" type="Node2D"]
script = ExtResource("1_65ybi")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-57, 0)
scale = Vector2(1.01094, 1.01094)
texture = ExtResource("1_bfqo5")
centered = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 647.0
mouse_filter = 1

[node name="Title" type="Label" parent="Control"]
layout_mode = 0
offset_left = 316.0
offset_top = 69.0
offset_right = 935.0
offset_bottom = 204.0
scale = Vector2(0.833614, 0.833614)
theme = ExtResource("3_2w1h0")
theme_override_font_sizes/font_size = 100
text = "Twenty-Eight"
horizontal_alignment = 1
uppercase = true

[node name="ColorRect" type="ColorRect" parent="Control/Title"]
show_behind_parent = true
layout_mode = 0
offset_left = -15.0
offset_top = 7.0
offset_right = 634.0
offset_bottom = 182.0
color = Color(0, 0, 0, 0.478431)

[node name="Title2" type="Label" parent="Control/Title"]
layout_mode = 0
offset_left = 127.0
offset_top = 73.0
offset_right = 481.0
offset_bottom = 208.0
theme = ExtResource("4_110fr")
text = "A Card Game"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Buttons" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 10.0
offset_top = 553.0
offset_right = 858.0
offset_bottom = 660.0
scale = Vector2(0.73684, 0.73684)

[node name="New_Game" type="Button" parent="Control/Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -382.0
offset_top = -43.5
offset_right = -142.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_2w1h0")
theme_type_variation = &"FlatButton"

[node name="ColorRect3" type="ColorRect" parent="Control/Buttons/New_Game"]
show_behind_parent = true
layout_mode = 0
offset_left = 5.50013
offset_top = 7.00006
offset_right = 235.5
offset_bottom = 79.0001
pivot_offset = Vector2(275, 78)
mouse_filter = 2
color = Color(0, 0, 0, 0.478431)

[node name="Label2" type="Label" parent="Control/Buttons/New_Game"]
layout_mode = 0
offset_left = 19.0716
offset_top = 15.7857
offset_right = 221.072
offset_bottom = 63.7857
theme = ExtResource("4_110fr")
theme_override_font_sizes/font_size = 33
text = "NEW GAME"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Setting" type="Button" parent="Control/Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -42.5
offset_right = 140.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_2w1h0")
theme_type_variation = &"FlatButton"

[node name="ColorRect2" type="ColorRect" parent="Control/Buttons/Setting"]
show_behind_parent = true
layout_mode = 0
offset_left = 5.50015
offset_top = 7.0
offset_right = 235.5
offset_bottom = 79.0
pivot_offset = Vector2(275, 78)
mouse_filter = 2
color = Color(0, 0, 0, 0.478431)

[node name="Label" type="Label" parent="Control/Buttons/Setting"]
layout_mode = 0
offset_left = 19.0716
offset_top = 15.7857
offset_right = 221.072
offset_bottom = 63.7857
theme = ExtResource("4_110fr")
theme_override_font_sizes/font_size = 33
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Exit" type="Button" parent="Control/Buttons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 168.0
offset_top = -41.5
offset_right = 408.0
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_2w1h0")

[node name="ColorRect2" type="ColorRect" parent="Control/Buttons/Exit"]
show_behind_parent = true
layout_mode = 0
offset_left = 5.50015
offset_top = 7.0
offset_right = 235.5
offset_bottom = 79.0
pivot_offset = Vector2(275, 78)
mouse_filter = 2
color = Color(0, 0, 0, 0.478431)

[node name="Label" type="Label" parent="Control/Buttons/Exit"]
layout_mode = 0
offset_left = 19.0716
offset_top = 15.7857
offset_right = 221.072
offset_bottom = 63.7857
theme = ExtResource("4_110fr")
theme_override_font_sizes/font_size = 33
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Black Fade" type="ColorRect" parent="Control"]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.01024, 1.02017)
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Music_Slider" parent="." instance=ExtResource("5_6xoau")]

[connection signal="mouse_entered" from="Control/Buttons/New_Game" to="." method="_on_new_game_mouse_entered" binds= ["New_Game"]]
[connection signal="mouse_exited" from="Control/Buttons/New_Game" to="." method="_on_mouse_exited" binds= ["New_Game"]]
[connection signal="pressed" from="Control/Buttons/New_Game" to="." method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="Control/Buttons/Setting" to="." method="_on_new_game_mouse_entered" binds= ["Setting"]]
[connection signal="mouse_exited" from="Control/Buttons/Setting" to="." method="_on_mouse_exited" binds= ["Setting"]]
[connection signal="mouse_entered" from="Control/Buttons/Exit" to="." method="_on_new_game_mouse_entered" binds= ["Exit"]]
[connection signal="mouse_exited" from="Control/Buttons/Exit" to="." method="_on_mouse_exited" binds= ["Exit"]]
[connection signal="pressed" from="Control/Buttons/Exit" to="." method="_on_exit_pressed"]
